--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 </div><!-- /.navbar-header-->
                 <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav navbar-right">
+                    <li class="smooth-menu"><a href="#pack">Που θα μείνω</a></li>
                     <li class="smooth-menu"><a href="#spo">Προορισμός</a></li>
-                    <li class="smooth-menu"><a href="#gallery">Δωμάτια</a></li>
                     <li class="smooth-menu"><a href="#pack">Φαγητό</a></li>
-                    <li class="smooth-menu"><a href="#pack">Τι να κάνεις</a></li>
+                    <li class="smooth-menu"><a href="#pack">Τι να κάνω</a></li>
                     <li class="smooth-menu"><a href="#subs">Επικοινωνία</a></li>
                     <li>
                       <button class="book-btn">θέλω προσφορά
@@ -127,24 +127,24 @@
 
             <ul class="nav nav-tabs" role="tablist">
 
-              <li role="presentation" class="active">
-                <a href="#tours" aria-controls="tours" role="tab" data-toggle="tab">
-                  <i class="fa fa-tree"></i>
-                  tours
+              <li role="presentation">
+                <a href="#hotels" aria-controls="hotels" role="tab" data-toggle="tab">
+                  <i class="fa fa-bed"></i>
+                  δωμάτια
                 </a>
               </li>
 
-              <li role="presentation">
-                <a href="#hotels" aria-controls="hotels" role="tab" data-toggle="tab">
-                  <i class="fa fa-building"></i>
-                  hotels
+              <li role="presentation" class="active">
+                <a href="#tours" aria-controls="tours" role="tab" data-toggle="tab">
+                  <i class="fa fa-beer"></i>
+                  φαγητό
                 </a>
               </li>
 
               <li role="presentation">
                 <a href="#flights" aria-controls="flights" role="tab" data-toggle="tab">
                   <i class="fa fa-plane"></i>
-                  flights
+                  προορισμός
                 </a>
               </li>
             </ul>
@@ -566,211 +566,19 @@
     </section><!--/.travel-box-->
     <!--travel-box end-->
 
-        <!--service start-->
-    <section id="service" class="service">
-      <div class="container">
-
-        <div class="service-counter text-center">
-
-          <div class="col-md-4 col-sm-4">
-            <div class="single-service-box">
-              <div class="service-img">
-                <img src="assets/images/service/s1.png" alt="service-icon" />
-              </div><!--/.service-img-->
-              <div class="service-content">
-                <h2>
-                  <a href="#">
-                  amazing tour packages
-                  </a>
-                </h2>
-                <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p>
-              </div><!--/.service-content-->
-            </div><!--/.single-service-box-->
-          </div><!--/.col-->
-
-          <div class="col-md-4 col-sm-4">
-            <div class="single-service-box">
-              <div class="service-img">
-                <img src="assets/images/service/s2.png" alt="service-icon" />
-              </div><!--/.service-img-->
-              <div class="service-content">
-                <h2>
-                  <a href="#">
-                    book top class hotel
-                  </a>
-                </h2>
-                <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p>
-              </div><!--/.service-content-->
-            </div><!--/.single-service-box-->
-          </div><!--/.col-->
-
-          <div class="col-md-4 col-sm-4">
-            <div class="single-service-box">
-              <div class="statistics-img">
-                <img src="assets/images/service/s3.png" alt="service-icon" />
-              </div><!--/.service-img-->
-              <div class="service-content">
-
-                <h2>
-                  <a href="#">
-                    online flight booking
-                  </a>
-                </h2>
-                <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p>
-              </div><!--/.service-content-->
-            </div><!--/.single-service-box-->
-          </div><!--/.col-->
-
-        </div><!--/.statistics-counter-->
-      </div><!--/.container-->
-    </section><!--/.service-->
-    <!--service end-->
-
-    <!--galley start-->
-    <section id="gallery" class="gallery">
-      <div class="container">
-        <div class="gallery-details">
-          <div class="gallary-header text-center">
-            <h2>
-              top destination
-            </h2>
-            <p>
-              Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
-            </p>
-          </div><!--/.gallery-header-->
-          <div class="gallery-box">
-            <div class="gallery-content">
-                <div class="filtr-container">
-                  <div class="row">
-
-                    <div class="col-md-6">
-                      <div class="filtr-item">
-                      <img src="assets/images/gallary/g1.jpg" alt="portfolio image"/>
-                      <div class="item-title">
-                        <a href="#">
-                          china
-                        </a>
-                        <p><span>20 tours</span><span>15 places</span></p>
-                      </div><!-- /.item-title -->
-                    </div><!-- /.filtr-item -->
-                    </div><!-- /.col -->
-
-                    <div class="col-md-6">
-                      <div class="filtr-item">
-                      <img src="assets/images/gallary/g2.jpg" alt="portfolio image"/>
-                      <div class="item-title">
-                        <a href="#">
-                          venuzuala
-                        </a>
-                        <p><span>12 tours</span><span>9 places</span></p>
-                      </div> <!-- /.item-title-->
-                    </div><!-- /.filtr-item -->
-                    </div><!-- /.col -->
-
-                    <div class="col-md-4">
-                      <div class="filtr-item">
-                      <img src="assets/images/gallary/g3.jpg" alt="portfolio image"/>
-                      <div class="item-title">
-                        <a href="#">
-                          brazil
-                        </a>
-                        <p><span>25 tours</span><span>10 places</span></p>
-                      </div><!-- /.item-title -->
-                    </div><!-- /.filtr-item -->
-                    </div><!-- /.col -->
-
-                    <div class="col-md-4">
-                      <div class="filtr-item">
-                      <img src="assets/images/gallary/g4.jpg" alt="portfolio image"/>
-                      <div class="item-title">
-                        <a href="#">
-                          australia
-                        </a>
-                        <p><span>18 tours</span><span>9 places</span></p>
-                      </div> <!-- /.item-title-->
-                    </div><!-- /.filtr-item -->
-                    </div><!-- /.col -->
-
-                    <div class="col-md-4">
-                      <div class="filtr-item">
-                      <img src="assets/images/gallary/g5.jpg" alt="portfolio image"/>
-                      <div class="item-title">
-                        <a href="#">
-                          netharland
-                        </a>
-                        <p><span>14 tours</span><span>12 places</span></p>
-                      </div> <!-- /.item-title-->
-                    </div><!-- /.filtr-item -->
-                    </div><!-- /.col -->
-
-                    <div class="col-md-8">
-                      <div class="filtr-item">
-                      <img src="assets/images/gallary/g6.jpg" alt="portfolio image"/>
-                      <div class="item-title">
-                        <a href="#">
-                          turkey
-                        </a>
-                        <p><span>14 tours</span><span>6 places</span></p>
-                      </div> <!-- /.item-title-->
-                    </div><!-- /.filtr-item -->
-                    </div><!-- /.col -->
-
-                  </div><!-- /.row -->
-
-                </div><!-- /.filtr-container-->
-            </div><!-- /.gallery-content -->
-          </div><!--/.galley-box-->
-        </div><!--/.gallery-details-->
-      </div><!--/.container-->
-    </section><!--/.gallery-->
-    <!--gallery end-->
-
-    <!--discount-offer start-->
-    <section class="discount-offer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="dicount-offer-content text-center">
-              <h2>Join with us within 21 January, 2018 and get upto 40% Discount</h2>
-              <div class="campaign-timer">
-                <div id="timer">
-                  <div class="time time-after" id="days">
-                    <span></span>
-                  </div><!--/.time-->
-                  <div class="time time-after" id="hours">
-
-                  </div><!--/.time-->
-                  <div class="time time-after" id="minutes">
-
-                  </div><!--/.time-->
-                  <div class="time" id="seconds">
-
-                  </div><!--/.time-->
-                </div><!--/.timer-->
-              </div><!--/.campaign-timer-->
-              <div class="about-btn">
-                <button  class="about-view discount-offer-btn">
-                  join now
-                </button>
-              </div><!--/.about-btn-->
-
-
-            </div><!-- /.dicount-offer-content-->
-          </div><!-- /.col-->
-        </div><!-- /.row-->
-      </div><!-- /.container-->
-    </section><!-- /.discount-offer-->
-    <!--discount-offer end-->
-
     <!--packages start-->
     <section id="pack" class="packages">
       <div class="container">
         <div class="gallary-header text-center">
           <h2>
-            special packages
+            που θα μείνω
           </h2>
           <p>
-            Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
+            Διάλεξε από τα παρακάτω σαλέ και πάρε αμέσως προσφορά.
+            <br>
+            Οι τιμές είναι φθηνότερες γιατί επικοινωνείς απευθείας με την επιχείρηση.
+            <br>
+            Δεν υπάρχουν μεσάζοντες.
           </p>
         </div><!--/.gallery-header-->
         <div class="packages-content">
@@ -1015,6 +823,202 @@
       </div><!--/.container-->
     </section><!--/.packages-->
     <!--packages end-->
+
+    <!--service start-->
+    <section id="service" class="service">
+      <div class="container">
+
+        <div class="service-counter text-center">
+
+          <div class="col-md-4 col-sm-4">
+            <div class="single-service-box">
+              <div class="service-img">
+                <img src="assets/images/service/s1.png" alt="service-icon" />
+              </div><!--/.service-img-->
+              <div class="service-content">
+                <h2>
+                  <a href="#">
+                  amazing tour packages
+                  </a>
+                </h2>
+                <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p>
+              </div><!--/.service-content-->
+            </div><!--/.single-service-box-->
+          </div><!--/.col-->
+
+          <div class="col-md-4 col-sm-4">
+            <div class="single-service-box">
+              <div class="service-img">
+                <img src="assets/images/service/s2.png" alt="service-icon" />
+              </div><!--/.service-img-->
+              <div class="service-content">
+                <h2>
+                  <a href="#">
+                    book top class hotel
+                  </a>
+                </h2>
+                <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p>
+              </div><!--/.service-content-->
+            </div><!--/.single-service-box-->
+          </div><!--/.col-->
+
+          <div class="col-md-4 col-sm-4">
+            <div class="single-service-box">
+              <div class="statistics-img">
+                <img src="assets/images/service/s3.png" alt="service-icon" />
+              </div><!--/.service-img-->
+              <div class="service-content">
+
+                <h2>
+                  <a href="#">
+                    online flight booking
+                  </a>
+                </h2>
+                <p>Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.</p>
+              </div><!--/.service-content-->
+            </div><!--/.single-service-box-->
+          </div><!--/.col-->
+
+        </div><!--/.statistics-counter-->
+      </div><!--/.container-->
+    </section><!--/.service-->
+    <!--service end-->
+
+    <!--galley start-->
+    <section id="gallery" class="gallery">
+      <div class="container">
+        <div class="gallery-details">
+          <div class="gallary-header text-center">
+            <h2>
+              top destination
+            </h2>
+            <p>
+              Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
+            </p>
+          </div><!--/.gallery-header-->
+          <div class="gallery-box">
+            <div class="gallery-content">
+                <div class="filtr-container">
+                  <div class="row">
+
+                    <div class="col-md-6">
+                      <div class="filtr-item">
+                      <img src="assets/images/gallary/g1.jpg" alt="portfolio image"/>
+                      <div class="item-title">
+                        <a href="#">
+                          china
+                        </a>
+                        <p><span>20 tours</span><span>15 places</span></p>
+                      </div><!-- /.item-title -->
+                    </div><!-- /.filtr-item -->
+                    </div><!-- /.col -->
+
+                    <div class="col-md-6">
+                      <div class="filtr-item">
+                      <img src="assets/images/gallary/g2.jpg" alt="portfolio image"/>
+                      <div class="item-title">
+                        <a href="#">
+                          venuzuala
+                        </a>
+                        <p><span>12 tours</span><span>9 places</span></p>
+                      </div> <!-- /.item-title-->
+                    </div><!-- /.filtr-item -->
+                    </div><!-- /.col -->
+
+                    <div class="col-md-4">
+                      <div class="filtr-item">
+                      <img src="assets/images/gallary/g3.jpg" alt="portfolio image"/>
+                      <div class="item-title">
+                        <a href="#">
+                          brazil
+                        </a>
+                        <p><span>25 tours</span><span>10 places</span></p>
+                      </div><!-- /.item-title -->
+                    </div><!-- /.filtr-item -->
+                    </div><!-- /.col -->
+
+                    <div class="col-md-4">
+                      <div class="filtr-item">
+                      <img src="assets/images/gallary/g4.jpg" alt="portfolio image"/>
+                      <div class="item-title">
+                        <a href="#">
+                          australia
+                        </a>
+                        <p><span>18 tours</span><span>9 places</span></p>
+                      </div> <!-- /.item-title-->
+                    </div><!-- /.filtr-item -->
+                    </div><!-- /.col -->
+
+                    <div class="col-md-4">
+                      <div class="filtr-item">
+                      <img src="assets/images/gallary/g5.jpg" alt="portfolio image"/>
+                      <div class="item-title">
+                        <a href="#">
+                          netharland
+                        </a>
+                        <p><span>14 tours</span><span>12 places</span></p>
+                      </div> <!-- /.item-title-->
+                    </div><!-- /.filtr-item -->
+                    </div><!-- /.col -->
+
+                    <div class="col-md-8">
+                      <div class="filtr-item">
+                      <img src="assets/images/gallary/g6.jpg" alt="portfolio image"/>
+                      <div class="item-title">
+                        <a href="#">
+                          turkey
+                        </a>
+                        <p><span>14 tours</span><span>6 places</span></p>
+                      </div> <!-- /.item-title-->
+                    </div><!-- /.filtr-item -->
+                    </div><!-- /.col -->
+
+                  </div><!-- /.row -->
+
+                </div><!-- /.filtr-container-->
+            </div><!-- /.gallery-content -->
+          </div><!--/.galley-box-->
+        </div><!--/.gallery-details-->
+      </div><!--/.container-->
+    </section><!--/.gallery-->
+    <!--gallery end-->
+
+    <!--discount-offer start-->
+    <section class="discount-offer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="dicount-offer-content text-center">
+              <h2>Join with us within 21 January, 2018 and get upto 40% Discount</h2>
+              <div class="campaign-timer">
+                <div id="timer">
+                  <div class="time time-after" id="days">
+                    <span></span>
+                  </div><!--/.time-->
+                  <div class="time time-after" id="hours">
+
+                  </div><!--/.time-->
+                  <div class="time time-after" id="minutes">
+
+                  </div><!--/.time-->
+                  <div class="time" id="seconds">
+
+                  </div><!--/.time-->
+                </div><!--/.timer-->
+              </div><!--/.campaign-timer-->
+              <div class="about-btn">
+                <button  class="about-view discount-offer-btn">
+                  join now
+                </button>
+              </div><!--/.about-btn-->
+
+
+            </div><!-- /.dicount-offer-content-->
+          </div><!-- /.col-->
+        </div><!-- /.row-->
+      </div><!-- /.container-->
+    </section><!-- /.discount-offer-->
+    <!--discount-offer end-->
 
     <!-- testemonial Start -->
     <section   class="testemonial">
