--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <!--responsive.css-->
     <link rel="stylesheet" href="assets/css/responsive.css" />
 
+    <meta name="google-site-verification" content="PTIgZEnIQTrbmYdqvA5uzc9InVXioMJ4dgLeBWA6ldQ" />
+
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
