Add google analytics

--- a/index.html
+++ b/index.html
@@ -370,5 +370,16 @@
     <script  src="assets/js/datepicker.js"></script>
     <!--Custom JS-->
     <script src="assets/js/custom.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122336190-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122336190-1');
+    </script>
+
   </body>
 </html>
